# sql_service

./: .gitignore  README.md  pyproject.toml  sql_access.py  sql_database.py  test.db
test/: test_crudsql.py
utils/: __init__.py  executors.py  validators.py
